Show character statement numbers

--- a/html_exporter/templates/root.html
+++ b/html_exporter/templates/root.html
@@ -74,6 +74,13 @@
 			box-shadow: -2px -2px 8px #000;
 			padding: 4px;
 		}
+		.statementIndex {
+			float: left;
+			margin-left: -40px;
+			margin-top: 0px;
+			color: #aaa;
+			font-size: 0.7em;
+		}
 	</style>
 </head>
 <body>
