--- a/html_exporter/templates/root.html
+++ b/html_exporter/templates/root.html
@@ -23,6 +23,7 @@
 			font-size: 2em;
 			font-weight: normal;
 			border-bottom: 2px solid #aaa;
+			text-align: center;
 		}
 		h2 {
 			font-size: 1.4em;
@@ -104,6 +105,7 @@
 	</div>
 
 	<div id="content">
+		<h1>{title}</h1>
 		{content}
 	</div>
 
