--- a/html_exporter/templates/statement.html
+++ b/html_exporter/templates/statement.html
@@ -1,4 +1,4 @@
-<div class="charBlock">
+<div class="charBlock" id="s{statement_index}">
 	<p class="statementIndex">{statement_index}</p>
 	<p class="charHead">{character_name}{note}</p>
 	<p class="charText">{text}</p>
